@@ -93,13 +93,15 @@ import org.junit.jupiter.api.Test;
 import static com.meterware.simplestub.Stub.createStub;
 import static oracle.kubernetes.operator.DomainConditionMatcher.hasCondition;
 import static oracle.kubernetes.operator.DomainFailureReason.Internal;
-import static oracle.kubernetes.operator.DomainFailureReason.Kubernetes;
 import static oracle.kubernetes.operator.DomainProcessorTestSetup.NS;
 import static oracle.kubernetes.operator.DomainProcessorTestSetup.SECRET_NAME;
 import static oracle.kubernetes.operator.DomainProcessorTestSetup.UID;
 import static oracle.kubernetes.operator.DomainSourceType.FromModel;
 import static oracle.kubernetes.operator.DomainSourceType.Image;
 import static oracle.kubernetes.operator.DomainSourceType.PersistentVolume;
+import static oracle.kubernetes.operator.EventConstants.ABORTED_ERROR;
+import static oracle.kubernetes.operator.EventConstants.DOMAIN_FAILED_EVENT;
+import static oracle.kubernetes.operator.EventMatcher.hasEvent;
 import static oracle.kubernetes.operator.IntrospectorConfigMapConstants.INTROSPECTOR_CONFIG_MAP_NAME_SUFFIX;
 import static oracle.kubernetes.operator.KubernetesConstants.HTTP_OK;
 import static oracle.kubernetes.operator.LabelConstants.CLUSTERNAME_LABEL;
@@ -404,6 +406,7 @@ class DomainProcessorTest {
                 PASSWORD_KEY, "password".getBytes()));
   }
 
+  @SuppressWarnings("HttpUrlsUsage")
   private void defineOKResponse(@Nonnull String serverName, int port) {
     final String url = "http://" + UID + "-" + serverName + "." + NS + ":" + port;
     httpSupport.defineResponse(createExpectedRequest(url), createStub(HttpResponseStub.class, HTTP_OK, OK_RESPONSE));
@@ -923,7 +926,7 @@ class DomainProcessorTest {
 
     executeScheduledRetry();
 
-    assertThat(getEvents().stream().anyMatch(EventTestUtils::isDomainFailedAbortedEvent), is(true));
+    assertThat(testSupport, hasEvent(DOMAIN_FAILED_EVENT).withMessageContaining(ABORTED_ERROR));
   }
 
   @Test
@@ -1036,8 +1039,8 @@ class DomainProcessorTest {
 
   private void setJobPodInitContainerStatusImagePullError() {
     testSupport.<V1Pod>getResourceWithName(POD, getJobName()).status(new V1PodStatus().initContainerStatuses(
-            Arrays.asList(new V1ContainerStatus().state(new V1ContainerState().waiting(
-                    new V1ContainerStateWaiting().reason("ImagePullBackOff").message("Back-off pulling image"))))));
+          List.of(new V1ContainerStatus().state(new V1ContainerState().waiting(
+                new V1ContainerStateWaiting().reason("ImagePullBackOff").message("Back-off pulling image"))))));
   }
 
   private V1Job createIntrospectorJob(String uid) {
@@ -1144,10 +1147,14 @@ class DomainProcessorTest {
     //one introspector pod, one admin server pod and two managed server pods
     assertThat(runningPods.size(), equalTo(4));
     for (V1Pod pod: runningPods) {
-      if (!pod.getMetadata().getName().contains(LegalNames.getIntrospectorJobNameSuffix())) {
+      if (isNotIntrospectorPod(pod)) {
         assertThat(getServerPodIntrospectionVersion(pod), equalTo(OLD_INTROSPECTION_STATE));
       }
     }
+  }
+
+  private boolean isNotIntrospectorPod(V1Pod pod) {
+    return !pod.getMetadata().getName().contains(LegalNames.getIntrospectorJobNameSuffix());
   }
 
   @Test
@@ -1162,7 +1169,7 @@ class DomainProcessorTest {
     //one introspector pod, one admin server pod and two managed server pods
     assertThat(runningPods.size(), equalTo(4));
     for (V1Pod pod: runningPods) {
-      if (!pod.getMetadata().getName().contains(LegalNames.getIntrospectorJobNameSuffix())) {
+      if (isNotIntrospectorPod(pod)) {
         assertThat(getServerPodIntrospectionVersion(pod), equalTo(NEW_INTROSPECTION_STATE));
       }
     }
@@ -1181,7 +1188,7 @@ class DomainProcessorTest {
     //one introspector pod, one admin server pod and three managed server pods
     assertThat(runningPods.size(), equalTo(5));
     for (V1Pod pod: runningPods) {
-      if (!pod.getMetadata().getName().contains(LegalNames.getIntrospectorJobNameSuffix())) {
+      if (isNotIntrospectorPod(pod)) {
         assertThat(getServerPodIntrospectionVersion(pod), equalTo("after-scaleup"));
       }
     }
@@ -1200,7 +1207,7 @@ class DomainProcessorTest {
     //one introspector pod, one admin server pod and one managed server pod
     assertThat(runningPods.size(), equalTo(3));
     for (V1Pod pod: runningPods) {
-      if (!pod.getMetadata().getName().contains(LegalNames.getIntrospectorJobNameSuffix())) {
+      if (isNotIntrospectorPod(pod)) {
         assertThat(getServerPodIntrospectionVersion(pod), equalTo("after-scaledown"));
       }
     }
@@ -1565,7 +1572,7 @@ class DomainProcessorTest {
   }
 
   @Test
-  void whenIstioDomainNoWideAdminPortEnabled_checkReadinessPortAndScheme() throws Exception {
+  void whenIstioDomainNoWideAdminPortEnabled_checkReadinessPortAndScheme() {
 
     String introspectorResult = ">>>  /u01/introspect/domain1/userConfigNodeManager.secure\n"
         + "#WebLogic User Configuration File; 2\n"
@@ -1700,6 +1707,7 @@ class DomainProcessorTest {
     defineServerResources(serverName, CLUSTER);
   }
 
+  @SuppressWarnings("SameParameterValue")
   private void defineServerResources(String serverName, String clusterName) {
     testSupport.defineResources(createServerPod(serverName, clusterName), createServerService(serverName, clusterName));
   }
@@ -1822,36 +1830,34 @@ class DomainProcessorTest {
   }
 
   private Integer getContainerReadinessPort(List<V1Pod> pods, String podName) {
-    for (V1Pod pod : pods) {
-      if (pod.getMetadata().getName().equals(podName)) {
-        return Optional.ofNullable(pod)
-            .map(V1Pod::getSpec)
-            .map(V1PodSpec::getContainers)
-            .flatMap(c -> c.stream().findFirst())
-            .map(V1Container::getReadinessProbe)
-            .map(V1Probe::getHttpGet)
-            .map(V1HTTPGetAction::getPort)
-            .map(IntOrString::getIntValue)
-            .orElse(null);
-      }
-    }
-    return null;
+    return pods.stream()
+          .filter(pod -> isNamedPod(pod, podName))
+          .findFirst()
+          .map(V1Pod::getSpec)
+          .map(V1PodSpec::getContainers)
+          .flatMap(c -> c.stream().findFirst())
+          .map(V1Container::getReadinessProbe)
+          .map(V1Probe::getHttpGet)
+          .map(V1HTTPGetAction::getPort)
+          .map(IntOrString::getIntValue)
+          .orElse(null);
+  }
+
+  private boolean isNamedPod(V1Pod pod, String name) {
+    return Optional.ofNullable(pod).map(V1Pod::getMetadata).map(V1ObjectMeta::getName).stream().anyMatch(name::equals);
   }
 
   private String getContainerReadinessScheme(List<V1Pod> pods, String podName) {
-    for (V1Pod pod : pods) {
-      if (pod.getMetadata().getName().equals(podName)) {
-        return Optional.ofNullable(pod)
-            .map(V1Pod::getSpec)
-            .map(V1PodSpec::getContainers)
-            .flatMap(c -> c.stream().findFirst())
-            .map(V1Container::getReadinessProbe)
-            .map(V1Probe::getHttpGet)
-            .map(V1HTTPGetAction::getScheme)
-            .orElse(null);
-      }
-    }
-    return null;
+    return pods.stream()
+          .filter(pod -> isNamedPod(pod, podName))
+          .findFirst()
+          .map(V1Pod::getSpec)
+          .map(V1PodSpec::getContainers)
+          .flatMap(c -> c.stream().findFirst())
+          .map(V1Container::getReadinessProbe)
+          .map(V1Probe::getHttpGet)
+          .map(V1HTTPGetAction::getScheme)
+          .orElse(null);
   }
 
   private void defineDuplicateServerNames() {
@@ -1901,17 +1907,13 @@ class DomainProcessorTest {
     domain.getSpec().withWebLogicCredentialsSecret(null);
     int time = 0;
 
-    for (int numRetries = 0; numRetries < DomainPresence.getDomainPresenceFailureRetryMaxCount(); numRetries++) {
+    for (int numRetries = 0; numRetries < DomainPresence.getFailureRetryMaxCount(); numRetries++) {
       processor.createMakeRightOperation(new DomainPresenceInfo(domain)).withExplicitRecheck().execute();
       time += DomainPresence.getDomainPresenceFailureRetrySeconds();
       testSupport.setTime(time, TimeUnit.SECONDS);
     }
 
     assertThat(getEvents().stream().anyMatch(EventTestUtils::isDomainFailedAbortedEvent), is(false));
-  }
-
-  private void addFailedCondition(DomainStatus status) {
-    status.addCondition(new DomainCondition(Failed).withStatus("True").withReason(Kubernetes));
   }
 
   private List<CoreV1Event> getEvents() {
